# IDKGameLoader

./: .gitignore  CMakeLists.txt  build.sh
IDKGE/: config.lua
src/: main.cpp
